# desafio_vexpenses

./: README.md  pyproject.toml
src/: desafio_funcs.py  main.py
