[tool.poetry]
name = "vexpenses"
version = "0.1.0"
description = ""
authors = ["Mairondc21 <duartemairon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
taskipy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.taskipy.tasks]
format = "isort src/desafio_funcs.py && black src/desafio_funcs.py"
lint = "flake8 src/desafio_funcs.py"
check = "task format && task lint"